test_data/unit/stack/test_app_vpc/test_app_vpc_stack_actual/staging/expected.json
{
  "Resources": {
    "NevergreenStagingAppVpcAppVpc582963E9": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.47.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ]
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1Subnet515F5128": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.47.0.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-staging-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1RouteTable308FD5E2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1RouteTableAssociation037F3FB9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1RouteTable308FD5E2"
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1Subnet515F5128"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1DefaultRoute4C07577B": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NevergreenStagingAppVpcAppVpcIGW292A5D0B"
        },
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1RouteTable308FD5E2"
        }
      },
      "DependsOn": [
        "NevergreenStagingAppVpcAppVpcVPCGWA44B9998"
      ]
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1EIP620DB0DE": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet1"
          }
        ]
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1NATGatewayB705AF7B": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1EIP620DB0DE",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1Subnet515F5128"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet1"
          }
        ]
      },
      "DependsOn": [
        "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1DefaultRoute4C07577B",
        "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1RouteTableAssociation037F3FB9"
      ]
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2SubnetB627659B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.47.32.0/19",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-staging-app-vpc_public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2RouteTableFEF45904": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2RouteTableAssociationC1B1029F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2RouteTableFEF45904"
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2SubnetB627659B"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2DefaultRoute01E90BEB": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NevergreenStagingAppVpcAppVpcIGW292A5D0B"
        },
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2RouteTableFEF45904"
        }
      },
      "DependsOn": [
        "NevergreenStagingAppVpcAppVpcVPCGWA44B9998"
      ]
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2EIPF38FC095": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet2"
          }
        ]
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2NATGateway26EE839D": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2EIPF38FC095",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2SubnetB627659B"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_publicSubnet2"
          }
        ]
      },
      "DependsOn": [
        "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2DefaultRoute01E90BEB",
        "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2RouteTableAssociationC1B1029F"
      ]
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.47.64.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-staging-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1RouteTable303DE9EC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_privateSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1RouteTableAssociation524CDFD0": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1RouteTable303DE9EC"
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1DefaultRouteBA1497F5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1NATGatewayB705AF7B"
        },
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1RouteTable303DE9EC"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.47.96.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-staging-app-vpc_private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2RouteTableCDD8EEF2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_privateSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2RouteTableAssociation20F499F9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2RouteTableCDD8EEF2"
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2DefaultRoute0FBC697A": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2NATGateway26EE839D"
        },
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2RouteTableCDD8EEF2"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet1Subnet2004618B": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.47.128.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-staging-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet1RouteTable32675096": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_isolatedSubnet1"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet1RouteTableAssociationA225037E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet1RouteTable32675096"
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet1Subnet2004618B"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet2Subnet35353EAD": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.47.160.0/19",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "nevergreen-staging-app-vpc_isolated"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet2RouteTableD54EA489": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/nevergreen-staging-app-vpc_isolatedSubnet2"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet2RouteTableAssociation2F0DD12E": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet2RouteTableD54EA489"
        },
        "SubnetId": {
          "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet2Subnet35353EAD"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcIGW292A5D0B": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ]
      }
    },
    "NevergreenStagingAppVpcAppVpcVPCGWA44B9998": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {
          "Ref": "NevergreenStagingAppVpcAppVpcIGW292A5D0B"
        },
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcEC2SecurityGroup80A762E2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/EC2/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcEC27DC0529A": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcEC2SecurityGroup80A762E2",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcEC2MESSAGESSecurityGroup2C4B6FE4": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/EC2_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcEC2MESSAGES56D6AA78": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcEC2MESSAGESSecurityGroup2C4B6FE4",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ec2messages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcSSMSecurityGroupC9C92D91": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/SSM/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcSSM9E6B1688": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcSSMSecurityGroupC9C92D91",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssm"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcSSMMESSAGESSecurityGroup2E02A250": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/SSM_MESSAGES/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcSSMMESSAGESD632649B": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcSSMMESSAGESSecurityGroup2E02A250",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ssmmessages"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcSECRETSMANAGERSecurityGroup196E4967": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/SECRETS_MANAGER/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcSECRETSMANAGER30B626A8": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcSECRETSMANAGERSecurityGroup196E4967",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".secretsmanager"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcECSAGENTSecurityGroup61D51801": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/ECS_AGENT/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcECSAGENT704F9354": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcECSAGENTSecurityGroup61D51801",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-agent"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcECSSecurityGroup01376A54": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/ECS/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcECS01C26B21": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcECSSecurityGroup01376A54",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcECSTELEMETRYSecurityGroup884B01A0": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NevergreenStagingAppVpcStack/NevergreenStagingAppVpcAppVpc/ECS_TELEMETRY/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": [
                "NevergreenStagingAppVpcAppVpc582963E9",
                "CidrBlock"
              ]
            },
            "Description": {
              "Fn::Join": [
                "",
                [
                  "from ",
                  {
                    "Fn::GetAtt": [
                      "NevergreenStagingAppVpcAppVpc582963E9",
                      "CidrBlock"
                    ]
                  },
                  ":443"
                ]
              ]
            },
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcECSTELEMETRY78DCD9D6": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "PrivateDnsEnabled": true,
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "NevergreenStagingAppVpcAppVpcECSTELEMETRYSecurityGroup884B01A0",
              "GroupId"
            ]
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".ecs-telemetry"
            ]
          ]
        },
        "SubnetIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1Subnet3E846560"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2Subnet3FE4327D"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Interface",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcAppVpcS3F049E633": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "RouteTableIds": [
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet1RouteTable303DE9EC"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcprivateSubnet2RouteTableCDD8EEF2"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet1RouteTable308FD5E2"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcpublicSubnet2RouteTableFEF45904"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet1RouteTable32675096"
          },
          {
            "Ref": "NevergreenStagingAppVpcAppVpcnevergreenstagingappvpcisolatedSubnet2RouteTableD54EA489"
          }
        ],
        "ServiceName": {
          "Fn::Join": [
            "",
            [
              "com.amazonaws.",
              {
                "Ref": "AWS::Region"
              },
              ".s3"
            ]
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "nevergreen-staging-app-vpc"
          }
        ],
        "VpcEndpointType": "Gateway",
        "VpcId": {
          "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
        }
      }
    },
    "NevergreenStagingAppVpcPrivateR53ZoneE1D7F1B4": {
      "Type": "AWS::Route53::HostedZone",
      "Properties": {
        "Name": "staging.internal.staging.daisy.com.",
        "VPCs": [
          {
            "VPCId": {
              "Ref": "NevergreenStagingAppVpcAppVpc582963E9"
            },
            "VPCRegion": {
              "Ref": "AWS::Region"
            }
          }
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
